# s2n-agent-xss-ai

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-lock.txt
adapters/: README.md
configs/: lora_3b.yaml  lora_7b.yaml  xss_lora_peft_8b.yaml
data/: kb_dataset.jsonl  test.jsonl  train.jsonl  train_enriched.jsonl  valid.jsonl
docs/: HF_MODEL_CARD.md  KNOWN_LIMITATIONS.md  SEVERITY_SCORING.md  USER_ACCEPTANCE_TEST.md  plan.md  plugin-plan.md
s2n_ai/: context_merger.py  external_reference_retriever.py  fastapi_client.py  finding_normalizer.py  finding_normalizer.py.bak.20260512_201301  finding_normalizer.py.bak.20260512_203921  finding_normalizer.py.bak_fix_20260512_204655  finding_normalizer.py.broken.20260512_204306  hybrid_rag_retriever.py  pdf_generator.py  pdf_generator.py.bak  pdf_generator.py.bak.20260512_114930  pdf_generator.py.bak.20260512_115345  pdf_generator.py.bak.20260512_120046  pdf_generator.py.bak.20260512_121453  pdf_generator.py.bak.20260512_122353  pdf_generator.py.bak.20260512_123423  pdf_generator.py.bak.20260512_124054  pdf_generator.py.bak.20260512_124948  pdf_generator.py.bak.20260512_182518  pdf_generator.py.bak.20260512_201301  pdf_generator.py.bak_before_vertical_v4_20260512_230245  pdf_generator.py.bak_v6_before_20260512_233334  pdf_generator.py.bak_vertical_v2_20260512_225415  pdf_vertical_summary_patch.py  rag_query_builder.py  rag_retriever.py  rag_router.py  report_generator.py  vector_rag_indexer.py  vector_rag_retriever.py
s2nagent/: __init__.py  agent.py  cli.py  (+1 more)
(+88 files in other folders)
